# vortex-stream

./: .gitignore  README.md  TRANSPORT_REFERENCE.md  pubspec.yaml
.github/workflows/: build-apk.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  vmx_jni.cpp
android/app/src/main/kotlin/com/vortex/vortexcam/: MainActivity.kt  OmtStreamPlugin.kt  SrtStreamPlugin.kt  VortexCamPlugin.kt
android/app/src/main/res/xml/: network_security_config.xml
lib/: main.dart
lib/models/: connection_config.dart
lib/screens/: camera_screen.dart  connect_screen.dart
lib/services/: camera_service.dart  connection_service.dart  log_service.dart  omt_connection_service.dart  rtmp_connection_service.dart  sbl_connection_service.dart  srt_connection_service.dart
lib/widgets/: samba_logo.dart
